# s3bids

./: .mise.toml  Makefile  pyproject.toml
src/s3bids/: HBNSite.py  HBNSubject.py  S3BIDSSubject.py  __init__.py  _default_bids_version.py  study.py  subject.py  utils.py
src/s3bids/hbn/: __init__.py  site.py  subject.py
tests/: __init__.py  test_s3bids.py
